[project]
name = "midea-dishwasher-api"
version = "1.3.2"
description = "Cliente Python para lava-louças Midea (device_type 0xE1, plugin v5) — codec do frame AA + transporte LAN V3."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
authors = [
    { name = "Rodrigo Roque", email = "rodrigogoncalvesroque@gmail.com" },
]
keywords = ["midea", "dishwasher", "iot", "smart-home", "lan"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["cryptography==48.0.1"]

[project.urls]
Homepage = "https://github.com/roquerodrigo/midea-dishwasher-api"
Repository = "https://github.com/roquerodrigo/midea-dishwasher-api"
Issues = "https://github.com/roquerodrigo/midea-dishwasher-api/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midea_dishwasher_api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/midea_dishwasher_api",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src/midea_dishwasher_api",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TC",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]
warn_unreachable = true
warn_unused_ignores = true
